--- a/src/pages/CourseDetails/CourseDetails.css
+++ b/src/pages/CourseDetails/CourseDetails.css
@@ -4,7 +4,7 @@
 
   background-image: url(../../assets/photos/cover.png);
   background-color: #eaf2f2;
-  height: 300px;
+  height: 430px;
 }
 .card-container {
   display: grid;
@@ -18,11 +18,14 @@
   .card-container {
     width: 90%;
   }
+  .img-container {
+    height: 465px;
+  }
 }
 
 @media only screen and (max-width: 576px) {
   .img-container {
-    height: 390px;
+    height: 410px;
   }
 
   .card-container {
